--- a/static/css/theme-gray.css
+++ b/static/css/theme-gray.css
@@ -1,6 +1,6 @@
 
 :root{
-    
+
     --MAIN-TEXT-color:#323232; /* Color of text by default */
     --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
     --MAIN-LINK-color:#f31c1c; /* Color of links */
@@ -8,7 +8,7 @@
     --MAIN-ANCHOR-color: #f31c1c; /* color of anchors on titles */
 
     --MENU-HEADER-BG-color:#242A31; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#3a444f; /*Color of menu header border */ 
+    --MENU-HEADER-BORDER-color:#3a444f; /*Color of menu header border */
 
     --MENU-SEARCH-BG-color: #3a444f; /* Search field background color (by default borders + icons) */
     --MENU-SEARCH-BOX-color: #e6ecf1; /* Override search field border color */
@@ -20,10 +20,10 @@
     --MENU-SECTIONS-LINK-HOVER-color: #f31c1c;  /* Color of links in menu, when hovered */
     --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
     --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #E6ECF1; /* Color of background for the active category (only) */
-    
+
     --MENU-VISITED-color: #ff3333; /* Color of 'page visited' icons in menu */
     --MENU-SECTION-HR-color: #2b2020; /* Color of <hr> separator in menu */
-    
+
 }
 
 body {
@@ -103,9 +103,23 @@ a:hover {
 }
 
 #body .tags a.tag-link {
-    background-color: var(--MENU-HEADER-BG-color);    
+    background-color: var(--MENU-HEADER-BG-color);
 }
 
 #body .tags a.tag-link:before {
     border-right-color: var(--MENU-HEADER-BG-color);
+}
+
+#homelinks {
+    background: var(--MENU-HEADER-BG-color);
+    background-color: var(--MENU-HEADER-BORDER-color);
+    border-bottom-color: var(--MENU-HEADER-BORDER-color);
+}
+
+#homelinks a {
+    color: var(--MENU-HOME-LINK-color);
+}
+
+#homelinks a:hover {
+    color: var(--MENU-HOME-LINK-HOVERED-color);
 }
